--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,17 @@ body * {
 /* MAIN STYLING */
 
 .wrapper {
-   background-color: rgb(138, 138, 138);
-   display: flex;
-   justify-content: space-around;
-   flex-wrap: wrap;
-   align-items: center;
+   display: grid;
+   grid-gap: 30px 50px;
+   grid-template-columns: 1.8fr 1fr;
+   padding: 100px;
 }
 
 .game-container {
-    background-color: lightblue;
+    background-color: white;
     border: 1px black solid;
     height: 300px;
-    width: 60%;
-    margin-top: 40px;
-    margin-bottom: 4vh;
+    border-radius: 5px;
 
     display: flex;
     align-items: center;
@@ -32,15 +29,33 @@ body * {
     flex-direction: column;
 }
 #options {
-    border: 1px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    height: 300px;
+    background-color: purple;
+
+}
+#options li {
+    text-decoration: none;
+    list-style: none;
+    background-color: red;
+    padding: 10px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    
 }
 
 .dec-container {
+    border: 1px black solid;
+    
     background-color: lightcoral;
     height: 300px;
-    width: 60%;
-    margin-right: 75px;
-    margin-bottom: 4vh;
+
+    border-radius: 5px;
+    
     
 }
 
