--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 body * {
     margin: 0px;
     padding: 0px;
+        
 }
 
 
@@ -15,18 +16,55 @@ body * {
    grid-gap: 30px 50px;
    grid-template-columns: 1.8fr 1fr;
    padding: 100px;
+    background-color:#b2bec3;
+   
+   
 }
 
 .game-container {
-    background-color: white;
+    background-color: whitesmoke;
     border: 1px black solid;
     height: 300px;
     border-radius: 5px;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     flex-direction: column;
+    padding: 0px 40px 30px 40px;
+}
+.inputContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.inputContainer button {
+    background-color: whitesmoke;
+    height: 30px;
+    width: 50px;
+    letter-spacing: 3px;
+}
+#userNameInput {
+    background-color: white;
+    width: 40%;
+    font-size: 18px;
+    letter-spacing: 2px;
+    padding: 10px;
+    color: rgba(0, 0, 0, 0.8);
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 2px 10px #b3b3b3;
+}
+
+#question {
+    display: none;
+    font-size: 25px;
+    padding: 30px;
+    background-color: #dfe6e9;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 #options {
     display: flex;
@@ -42,10 +80,13 @@ body * {
     list-style: none;
     background-color: red;
     padding: 10px;
-    width: 90%;
+    width: 80%;
+    height: 30px;
     display: flex;
     justify-content: center;
-    
+    align-items: center;
+    font-size: 20px;
+    border-radius: 5px;
 }
 
 .dec-container {
@@ -62,12 +103,18 @@ body * {
 .char-container {
     background-color: lightgoldenrodyellow;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .inv-container  {
     background-color: lightgreen;
 }
-
+#inv li {
+    text-decoration: none;
+    list-style: none;
+}
 
 
 
