Everything works, added more maintext, css changes, removed inv filler

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,11 @@
 body * {
     margin: 0px;
     padding: 0px;
-        
+    letter-spacing: 1px;
+
+}
+body {
+    background-color: #2d3436;
 }
 
 
@@ -16,7 +20,8 @@ body * {
    grid-gap: 30px 50px;
    grid-template-columns: 1.8fr 1fr;
    padding: 100px;
-    background-color:#b2bec3;
+    background-color:#2d3436;
+    height: 100%;
    
    
 }
@@ -41,10 +46,15 @@ body * {
     justify-content: center;
 }
 .inputContainer button {
+    margin-left: 10px;
     background-color: whitesmoke;
-    height: 30px;
-    width: 50px;
+    height: 40px;
+    width: 80px;
     letter-spacing: 3px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 2px 10px #b3b3b3;
+    
 }
 #userNameInput {
     background-color: white;
@@ -56,6 +66,7 @@ body * {
     border-radius: 5px;
     border: none;
     box-shadow: 1px 2px 10px #b3b3b3;
+    font-weight: 100;
 }
 
 #question {
@@ -65,6 +76,7 @@ body * {
     background-color: #dfe6e9;
     border: 2px solid black;
     border-radius: 5px;
+    letter-spacing: 2px;font-weight: 300;
 }
 #options {
     display: flex;
@@ -72,13 +84,13 @@ body * {
     justify-content: space-evenly;
     flex-direction: column;
     height: 300px;
-    background-color: purple;
+    background-color: #b2bec3;
 
 }
 #options li {
     text-decoration: none;
     list-style: none;
-    background-color: red;
+    background-color: #81ecec;
     padding: 10px;
     width: 80%;
     height: 30px;
@@ -101,19 +113,36 @@ body * {
 }
 
 .char-container {
-    background-color: lightgoldenrodyellow;
+    background-color: #ffeaa7;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.borderContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 50%;
 }
 
 .inv-container  {
-    background-color: lightgreen;
+    background-color: #00b894;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 20px;
+    font-size: 25px;
 }
 #inv li {
     text-decoration: none;
     list-style: none;
+    margin: 20px;
+    font-size: 20px;
+
 }
 
 
