--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ body {
     flex-direction: column;
     height: 300px;
     background-color: #b2bec3;
+    
 
 }
 #options li {
@@ -99,6 +100,8 @@ body {
     align-items: center;
     font-size: 20px;
     border-radius: 5px;
+    box-shadow: 1px 2px 10px #505050;
+    
 }
 
 .dec-container {
@@ -170,4 +173,10 @@ body {
     height: 20px;
     width: 20px;
     background-color: lightgreen;
+}
+.boxshadow-btn {
+    height: 20px;
+    width: 20px;
+    background-color: whitesmoke;
+    border: 1px dashed #ddd;
 }
