--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 .wrapper {
    display: grid;
    grid-gap: 30px 50px;
-   grid-template-columns: 1.8fr 1fr;
+   grid-template-columns: 2.4fr 1fr;
    padding: 100px;
     background-color:#2d3436;
     height: 100%;
@@ -54,6 +54,7 @@ body {
     border-radius: 5px;
     border: none;
     box-shadow: 1px 2px 10px #b3b3b3;
+    font-size: 16px;
     
 }
 #userNameInput {
@@ -69,6 +70,7 @@ body {
     font-weight: 100;
 }
 
+
 #question {
     display: none;
     font-size: 25px;
@@ -81,10 +83,10 @@ body {
 #options {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-direction: column;
     height: 300px;
-    background-color: #b2bec3;
+    background-color: #2d3436;
     
 
 }
@@ -93,23 +95,22 @@ body {
     list-style: none;
     background-color: #81ecec;
     padding: 10px;
-    width: 80%;
+    width: 98%;
     height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 24px;
     border-radius: 5px;
     box-shadow: 1px 2px 10px #505050;
+    margin-bottom: 50px;
+    
     
 }
 
 .dec-container {
-    border: 1px black solid;
     
-    background-color: lightcoral;
     height: 300px;
-
     border-radius: 5px;
     
     
@@ -122,7 +123,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 24px;
 }
 .borderContainer {
     display: flex;
@@ -139,6 +140,7 @@ body {
     justify-content: flex-start;
     padding: 20px;
     font-size: 25px;
+    border-radius: 5px;
 }
 #inv li {
     text-decoration: none;
@@ -163,20 +165,27 @@ body {
     height: 20px;
     width: 20px;
     background-color: lightblue;
+    border-radius: 50%;
 }
 .red-border-btn {
     height: 20px;
     width: 20px;
     background-color: lightcoral;
+    border-radius: 50%;
+    
 }
 .green-border-btn {
     height: 20px;
     width: 20px;
     background-color: lightgreen;
+    border-radius: 50%;
+    
 }
 .boxshadow-btn {
     height: 20px;
     width: 20px;
     background-color: whitesmoke;
     border: 1px dashed #ddd;
+    border-radius: 50%;
+    
 }
